# multi-bot

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  RECOVERY_ISSUE_51.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: task.md
.github/PULL_REQUEST_TEMPLATE/: engineer_requirements.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE_DIAGRAM.md  DOMAIN_ER.md  INTERACTION_FLOW.md  REQUIREMENT.md  USE_CASES.md
src/application/: __init__.py  entrypoint.py
src/control_plane/: __init__.py  entrypoint.py
src/multi_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/shared_contracts/: __init__.py  issue_contract.py  requirement_discovery_contract.py
src/worker_runtime/: __init__.py  (+1 more)
tests/: test_control_plane_engineer_execution.py  test_control_plane_requirement_discovery.py  test_engineer_execution_application.py  test_engineer_execution_contracts.py  test_engineer_implementation_reentry_contracts.py  test_implementation_blocker_contracts.py  test_implementation_post_merge_delivery_routing_contracts.py  test_implementation_pull_request_application.py  test_implementation_pull_request_contracts.py  test_initial_packages.py  test_manager_implementation_review_application.py  test_manager_implementation_review_decision_contracts.py  test_manager_implementation_review_execution_contracts.py  test_manager_implementation_review_input_contracts.py  test_requirement_discovery_application.py  test_requirement_discovery_contracts.py  test_uv_workflow_configuration.py  test_worker_runtime_engineer_execution.py  test_worker_runtime_requirement_discovery.py
