[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-bot"
version = "0.1.0"
description = "Bootstrap baseline for a multi-bot development monorepo."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
dev = ["mypy", "pytest", "ruff"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
